[gd_scene load_steps=2 format=3 uid="uid://chiqbu20hbb26"]

[ext_resource type="Script" path="res://inventory_ui/inventory_ui.gd" id="1_45i6y"]

[node name="InventoryUI" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.999998, 1)
script = ExtResource("1_45i6y")

[node name="TabBar" type="TabBar" parent="."]
layout_mode = 2
size_flags_vertical = 0

[node name="ItemContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="ItemList" type="GridContainer" parent="ItemContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 6

[node name="InfoPanel" type="GridContainer" parent="ItemContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 5
